# chromium-mpv

./: .gitignore  BUILD.gn  README.md  mpv.html  mpv.js  package-lock.json  package.json
buildflags/: BUILD.gn  buildflags.gni
ppapi/: CMakeLists.txt  pepper.cc
ppapi/cmake/: FindNACL_SDK.cmake  UseMTLinkInMSVC.cmake
tmp/player/: index.js  store.js  style.scss
tmp/player/components/: ai-switch.vue  app.vue  card-equalizer.vue  card-screenshot.vue  controller.vue  group-screenshot.vue  icon-button.vue  local-detection-switch.vue  notice.vue  play-list.vue  url-input-modal.vue  video-wrap.vue
tmp/player/components/live/: index.vue  live-main-video-captures.vue  live-main-video.vue  live-player.vue  live-sub-video.vue  profiling-panel.vue  stream-list.vue  sub-video-controls.vue
tmp/plugin/: base.js  index.js  player-components.js  player.js  test.html  utils.js
tmp/plugin/scrcpy/: command-control-message.js  control-message.js  key-code-map.js  key-event.js  text-control-message.js  touch-control-message.js
webui/mpv/: BUILD.gn  README.md  index.html  index.js  policy.js
webui/mpv/elements/: btn.js  control-bar.js  controller-bar.js  icon.js  loading.js  localized.js  media-info.js  mpv-client.js  notice.js  play-bar.js  policy.js  stacked-btn.js  utils.js  video.js  volume-ctrl.js
webui/mpv/elements/scrcpy/: buffer-view.js  control-client.js  keycode-control-message.js  motion-event.js  scroll-control-message.js
webui/mpv/i18n/: en.yml  index.js  zh-CN.yml
